tests/ui/fmt/fmt_debug/invalid.rs
//@ compile-flags: -Zfmt-debug=invalid-value
//@ failure-status: 1
fn main() {
}

//~? ERROR incorrect value `invalid-value` for unstable option `fmt-debug`
